--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /* 
-Theme Name: photokadeh
+Theme Name: rasaderooz
 Theme URI: http://ihasht.ir/
 Author: ihasht.ir 
 Author URI: http://ihasht.ir/
-Description: This template has been specially designed for photokadeh.com.
-Version: 2.0.0
-Text Domain: photokadeh
+Description: This template has been specially designed for Rasaderooz.ir .
+Version: 3.0.0
+Text Domain: rasaderooz
 */
