--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,6 +9,7 @@ $container-max-widths: (
 $primary:       #087DAF !default; 
 $secondary:     #4A4A4A !default;   
 $info:          #205D86 !default;
+$body-color: #373a3d;
  
 $display-font-sizes: ( 
   1: 2.0000rem,   
@@ -17,28 +18,29 @@ $display-font-sizes: (
   4: 1.125rem,
   5: 0.9375rem,
   6: 0.8125rem 
-);
-$display-font-weight: 300; 
+); 
+// $display-font-weight: 300; 
 
 $font-size-base: 0.818rem;
 $lead-font-size: $font-size-base * 1;
 $lead-font-weight: 300;
 $display-line-height: 1.5; 
 
+
      
 @import '../../node_modules/bootstrap/scss/bootstrap-reboot.scss'; 
 @import '../../node_modules/bootstrap/scss/bootstrap-utilities.scss';
 @import '../../node_modules/bootstrap/scss/bootstrap-grid.scss';
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
-@import '../css/custom-style.css';  
+@import '../css/custom-style.css';      
       
     
 /*  add Custom style for bootstrap borders */
-@media (max-width: 576px) { 
-  .i8-border-sm-none{border: 0 !important;};    
-}     
-@media (max-width: 768px) { 
-  .i8-border-md-none{border: 0 !important;};       
+@media (max-width: 576px) {    
+  .i8-border-sm-none{border: 0 !important;};      
+} 
+@media (max-width: 768px) {  
+  .i8-border-md-none{border: 0 !important;};
 }
 @media (max-width: 992px) {
   .i8-border-lg-none{border: 0 !important;}; 
