change folder name and screenshot

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /* 
-Theme Name: i8-Anidshe
+Theme Name: قالب اختصاصی اندیشه
 Theme URI: http://ihasht.ir/
 Author: ihasht.ir 
 Author URI: http://ihasht.ir/
-Description: This template has been specially designed for anishemoaser.ir .
+Description: این قالب به صورت اختصاصی برای سایت anishemoaser.ir طراحی شده است.
 Version: 4.0.0
 Text Domain: i8-Anidshe
 */
