home page rediseng

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,20 +3,20 @@ $container-max-widths: (
   sm: 570px,
   md: 820px,  
   lg: 960px,      
-  xl: 1280px 
+  xl: 1300px
 ) ; 
 // $primary:       var(--bs-p rimary) !default;   
-$primary:       #087DAF !default; 
+$primary:       rgba(20, 50, 96, 1) !default;   
 $secondary:     #4A4A4A !default;   
 $info:          #205D86 !default; 
-$body-color: #373a3d;
-  
+$body-color: #373a3d;  
+   
 $display-font-sizes: ( 
   1: 2.0000rem,   
-  2: 1.5625rem,  
-  3: 1.3125rem,
-  4: 1.125rem,
-  5: 0.9375rem,  
+  2: 1.5625rem,   
+  3: 1.3125rem, 
+  4: 1.125rem,      
+  5: 0.9375rem,       
   6: 0.8125rem   
 ); 
 // $display-font-weight: 300; 
@@ -27,7 +27,7 @@ $lead-font-weight: 300;
 $display-line-height: 1.5; 
 
 
-     
+      
 @import '../../node_modules/bootstrap/scss/bootstrap-reboot.scss'; 
 @import '../../node_modules/bootstrap/scss/bootstrap-utilities.scss';
 @import '../../node_modules/bootstrap/scss/bootstrap-grid.scss';
