--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -34,6 +34,7 @@
   --i8-dark-fg-color: #222740;
   --i8-light-blue: #00C2FF;
   --i8-flip-box-hover: #F44336;
+  --i8-light-title-color: #505050;
 }
 
 :root,
@@ -46,9 +47,11 @@
   padding: 0;
 }
 
-
+.f10 {
+  font-size: 10px;
+}
 .f11 {
-  font-size: 12px;
+  font-size: 11px;
 }
 
 .f12 {
@@ -232,11 +235,11 @@
 }
 
 .text-subtitle {
-  color: #535353;
+  color: #787777;
 }
 
 .text-gray {
-  color: #757575;
+  color: #595959;
 }
 
 .bg-gray {
@@ -253,6 +256,11 @@
 
 .bg-main {
   background-color: var(--i8-light-bg-color);
+}
+.cat_btn_link {
+  color: var(--i8-light-complete-color);
+  padding: 2px;
+  border-bottom: 1px solid var(--i8-light-complete-color);
 }
 
 .transition1 {
@@ -289,6 +297,11 @@ body * {
     -webkit-font-feature-settings: "ss02";
     font-feature-settings: "ss02";
   }
+}
+
+.box{
+  background: #FFF;
+  /* box-shadow: 1px 1px 10px 0px rgba(213, 213, 213, 0.12); */
 }
 
 body a {
@@ -552,9 +565,7 @@ span.page-numbers.current {
 
 .box {
   background-color: var(--i8-light-fg-color);
-  padding: 24px 24px;
-  box-shadow: 0px 1px 3px 0 rgb(61 61 61 / 8%), 0 0 1px 0 rgba(0, 0, 0, .1);
-  border-radius: 3px;
+  /* box-shadow: 0px 1px 3px 0 rgb(61 61 61 / 8%), 0 0 1px 0 rgba(0, 0, 0, .1); */
   overflow: hidden;
 }
 
@@ -927,7 +938,7 @@ ul.dropdown-menu.submenu {
 .nav-item a.active {
   font-size: 16px;
   font-weight: 800;
-  color: var(--i8-light-primary);
+  color: var(--i8-light-primary) !important;
 }
 
 .nav-item a:hover {
@@ -1436,13 +1447,6 @@ tr th:last-child {
   }
 }
 
-@media (min-width: 1200px) {
-  .top-section {
-    border: 1px solid var(--bs-border-color);
-    border-top: 0;
-    border-bottom: 0;
-  }
-}
 
 @media (min-width: 1400px) {}
 
@@ -1676,8 +1680,9 @@ body.bg-main.dark-mode a:hover,
 /* Number List Items */
 
 /*  box title  */
-.box-title:before {
-  content: '—';
+/* .box-title:before {
+  content: '';
+  background-image: ;
   padding-left: 10px;
   color: var(--i8-dark-complete-color);
   font-size: 40px;
@@ -1690,13 +1695,14 @@ body.bg-main.dark-mode a:hover,
   color: var(--i8-dark-complete-color);
   font-size: 40px;
   font-weight: 900;
-}
+} */
 
 .box-title {
+  padding: 12px 0;
   color: var(--i8-light-primary);
-  font-variation-settings: "wght" 700, "DOTS" 3 !important;
-
+  font-variation-settings: "wght" 700, "DOTS" 5 !important;
 }
+
 
 /* box title */
 
@@ -1803,7 +1809,7 @@ body.bg-main.dark-mode a:hover,
 
 .post-title a,
 .list-title a {
-  color: var(--i8-light-secondary);
+  color: var(--i8-light-title-color);
 }
 
 .post-title a:hover {
