--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -318,7 +318,7 @@ body a {
 
 
 
-a.i8-blink { 
+a.i8-blink , .content-entry a { 
     padding-bottom: 0px;
     background: -webkit-gradient(linear, right top, left top, from(var(--i8-dark-complete-color)), to(var(--i8-dark-complete-color)));
     background: linear-gradient(to left, var(--i8-dark-complete-color) 0%, var(--i8-dark-complete-color) 40%);
@@ -331,7 +331,7 @@ a.i8-blink {
     padding: 0;
     color: inherit !important;
 }
-a.i8-blink:hover {
+a.i8-blink:hover , .content-entry a:hover{
   background-size: 100% 10%;
 }
 
@@ -513,7 +513,9 @@ header #headContact:hover #headAssistants {
     stroke-dashoffset: 1000;
   }
 }
-
+.btn{
+  border-radius: 0px !important;
+}
 .btn-main {
   color: #fff !important;
   background-color: var(--i8-light-primary) !important;
@@ -626,7 +628,6 @@ a.comment-reply-link {
 
 .main-input {
   padding: 10px;
-  border-radius: 5px;
   border: 1px solid #dadada;
 }
 
@@ -696,12 +697,20 @@ footer{
 }
 
 .tag-item {
-  border-radius: 3px;
-  background: #f5f5f5;
   padding: 2px 8px;
   margin-left: 15px;
   color: var(--i8-light-primary);
   max-height: 27px;
+}
+
+.reference{
+    color: #202020;
+    text-align: right;
+    font-size: 14px!important;
+    font-weight: 200;
+    margin-top: 2px;
+    padding: 0 5px;
+    border-right: 4px solid var(--i8-dark-complete-color);
 }
 
 .eslr-buttons {
@@ -773,7 +782,7 @@ footer{
   margin-bottom: 3%;
 }
 
-.breadcrumb-item a {
+.i8-breadcrumb-item a {
   border: none !important;
   color: #848484;
 }
@@ -1172,14 +1181,21 @@ img.hover:hover {
   color: var(--bs-info) !important;
 }
 
-.content-entry a:hover {
-  border-bottom: 3px solid #DE424F;
+/* .content-entry a:hover {
+  border-bottom: 3px solid var(--i8-dark-complete-color);
   color: var(--bs-info);
-}
+} */
 
 .content-entry ul li {
-  list-style: disc;
+  list-style: square;
   margin-bottom: 10px;
+  font-size: 18px;
+  line-height: 180%;
+  padding-bottom: 11px;
+}
+.content-entry ul li::marker {
+  color: var(--i8-dark-complete-color);
+  font-size: 150%;
 }
 
 .content-entry h1,
@@ -1190,44 +1206,68 @@ img.hover:hover {
 .content-entry h6 {
   color: var(--i8-light-primary);
   text-align: right;
-  line-height: 160%;
+  line-height: 180%;
+  margin-top: 25px;
 }
 
 .content-entry h1 {
-  font-size: 25px;
+  font-size: 35px;
+  font-weight: 700;
 }
 
 .content-entry h2 {
-  font-size: 24px;
+  font-size: 30px;
+  font-weight: 700;
+
 }
 
 .content-entry h3 {
-  font-size: 23px;
+  font-size: 25px;
+  font-weight: 700;
+
 }
 
 .content-entry h4 {
   font-size: 22px;
+  font-weight: 700;
+
 }
 
 .content-entry h5 {
   font-size: 20px;
+  font-weight: 600;
+
 }
 
 .content-entry h6 {
   font-size: 19px;
+  font-weight: 500;
+
 }
 
 .content-entry img {
   width: auto;
-  border-radius: 15px;
-  object-fit: cover;
-  max-width: 100%;
   height: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 30px auto;
-
+  max-width: 100%;
+  /* border-radius: 15px; */
+  /* object-fit: cover; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* margin: 30px auto; */
+}
+.wp-caption{
+  width: 100% !important;
+  padding: 1%;
+}
+p.wp-caption-text{
+  color: #202020;
+  text-align: right;
+  font-size: 14px !important;
+  font-weight: 200;
+  margin-top: 2px;
+  padding: 0 5px;
+  border-right: 4px solid var(--i8-dark-complete-color);
 }
 
 .content-entry ul {
@@ -1235,32 +1275,20 @@ img.hover:hover {
 }
 
 .content-entry blockquote {
-  align-items: center;
-  background-position: top right;
-  background-repeat: no-repeat;
   padding: 24px;
   background-color: #F6F6F6;
   color: #292929;
-  position: relative;
   margin: 40px 0 25px;
 }
 
 blockquote p,
 blockquote p i {
-  margin: 0 !important;
-  font-style: normal !important;
+  margin: 0!important;
+  font-style: normal!important;
+  border-right: 7px solid var(--i8-dark-complete-color);
+  padding-right: 15px;
 }
 
-blockquote p::before {
-  content: "\201C";
-  color: #DE424F;
-  font-size: 10rem;
-  padding-top: 10px;
-  position: absolute;
-  top: 14px;
-  right: 10px;
-  font-family: sans-serif !important;
-}
 
 .page-bottom-sidebar{
   background-color: var(--i8-light-primary-light);
@@ -1661,8 +1689,8 @@ body.bg-main.dark-mode a:hover,
   color: #ffffff !important;
 }
 
-.breadcrumb a,
-.dark-mode .breadcrumb a,
+.i8-breadcrumb a,
+.dark-mode .i8-breadcrumb a,
 .dark-mode .social-share a,
 .social-share a {
   border: none !important;
@@ -1770,7 +1798,7 @@ body.bg-main.dark-mode a:hover,
   color: var(--i8-light-primary);
   font-variation-settings: "wght" 700, "DOTS" 5 !important;
 }
-.breadcrumb > .current{
+.i8-breadcrumb > .current{
   color: var(--i8-dark-complete-color);
 }
 
@@ -2066,7 +2094,7 @@ h2.post-flip-box-title {
   min-width: 25%;
 }
 
-.breadcrumb {
+.i8-breadcrumb {
   padding: 15px 0 !important;
 }
 
@@ -2107,14 +2135,14 @@ h2.post-flip-box-title {
 
 .share-btn.active {
   color: #ffffff;
-  background-color: #dc3545;
+  background-color: var(--i8-dark-complete-color);
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
   padding: 5px 5px 5px 12px;
 }
 
 .share-btn.active:hover {
-  background-color: #cf2838;
+  background-color: var(--i8-dark-complete-color);
 }
 
 .share-url {
